--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 FLASK_APP=flaskr
 FLASK_ENV= development
 FLASK_RUN_PORT = 8080
+SECRET_KEY = 12n1jenw9f
+SQLALCHEMY_DATABASE_URI = mysql://root:monu1988@localhost/flask_tutorial
