--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ flask = "*"
 python-dotenv = "*"
 flask-sqlalchemy = "*"
 flask-mysqldb = "*"
+pyjwt = "==1.7.1"
+flask-jwt = "*"
 
 [dev-packages]
 
