--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,10 @@ flask = "*"
 python-dotenv = "*"
 flask-sqlalchemy = "*"
 flask-mysqldb = "*"
-pyjwt = "==1.7.1"
+pyjwt = "*"
 flask-jwt = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
