--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ FLASK_APP=flaskr
 FLASK_ENV= development
 FLASK_RUN_PORT = 8080
 SECRET_KEY = 12n1jenw9f
-SQLALCHEMY_DATABASE_URI = mysql://root:root@localhost/flask_tutorial
+SQLALCHEMY_DATABASE_URI = mysql://root:monu1988@localhost/flask_tutorial
